# cosmic-idle

./: Cargo.toml  justfile
cosmic-idle-config/: Cargo.toml
cosmic-idle-config/src/: lib.rs
debian/: changelog  control  cosmic-idle.install  rules
src/: fade_black.rs  freedesktop_screensaver.rs  main.rs
